fix ads
